# challenge_ford_back_dev

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  test.db
alembic/: env.py
alembic/versions/: 6dca9c023fe4_criando_todas_as_tabelas_do_projeto.py
app/: errors.py  main.py
app/configs/: auth.py  config.py  database.py  trigger.sql
app/models/: model_location.py  model_part.py  model_purchase.py  model_supplier.py  model_token.py  model_user.py  model_vehicle.py  model_warranty.py
app/routers/: analytical.py  auth.py  location.py  part.py  purchase.py  supplier.py  vehicle.py  warranty.py
app/schemas/: analytical.py  auth.py  location.py  part.py  purchase.py  supplier.py  user.py  vehicle.py  warranty.py
app/tests/: conftest.py
app/tests/routers/: test_analytical.py  test_auth.py  test_login.py  test_register.py
app/utils/: auth.py  location.py  part.py  purchase.py  supplier.py  vehicle.py  warranty.py
instructions/: test.sql
